--- a/src/app/shared/app-navbar/app-navbar.component.html
+++ b/src/app/shared/app-navbar/app-navbar.component.html
@@ -1,12 +1,9 @@
 <nav class="navbar navbar-expand-md navbar-light fixed-top">
-    <a class="navbar-brand" routerLink="/">Bievenido</a>
+    <a class="navbar-brand" routerLink="/">Bienvenido</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" routerLink="/user">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/what">Link</a>
         </li>
       </ul>
     </div>
