documentacion y ajustes de colores

--- a/src/app/shared/app-navbar/app-navbar.component.html
+++ b/src/app/shared/app-navbar/app-navbar.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-md navbar-light fixed-top">
-    <a class="navbar-brand" routerLink="/">Bienvenido</a>
+    <a class="navbar-brand" routerLink="/">Welcome</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/user">Link</a>
+          <a class="nav-link" routerLink="/user">User</a>
         </li>
       </ul>
     </div>
