--- a/src/assets/scss/custom-variables.scss
+++ b/src/assets/scss/custom-variables.scss
@@ -1,6 +1,6 @@
 $enable-rounded: false;
-$bgDefault: #2a4f6e;
-$bgHighlight: #042037;
+$bgDefault: #a01b38;
+$bgHighlight: #0c0437;
 $colDefault: #e7e7ef;
 $colHighlight: #728da5;
 $dropDown: true;
