--- a/src/assets/scss/custom-variables.scss
+++ b/src/assets/scss/custom-variables.scss
@@ -2,5 +2,5 @@ $enable-rounded: false;
 $bgDefault: #a01b38;
 $bgHighlight: #0c0437;
 $colDefault: #e7e7ef;
-$colHighlight: #728da5;
+$colHighlight: #5f7a92;
 $dropDown: true;
